--- a/vignettes/calculating_methylation_transcription_correlations.Rmd
+++ b/vignettes/calculating_methylation_transcription_correlations.Rmd
@@ -141,6 +141,9 @@ should jsut take a few minutes.
 # Find samples with both WGBS and RNA-seq count data
 common_mcprc_samples <- intersect(names(mcrpc_transcript_counts), colnames(mcrpc_wgbs_hg38_chr11))
 
+# Create a BPPARAM class
+BPPARAM = BiocParallel::MulticoreParam(workers = 2)
+
 # Calculate CpG methylation-transcription correlations for all TSS on chromosome 11
 system.time({transcript_cpg_meth_cors_mcrpc_samples_5kb <- calculateMethSiteTranscriptCors(
   meth_rse = mcrpc_wgbs_hg38_chr11, 
@@ -148,7 +151,7 @@ system.time({transcript_cpg_meth_cors_mcrpc_samples_5kb <- calculateMethSiteTran
   samples_subset = common_mcprc_samples, 
   tss_gr = transcript_tss_chr11,
   cor_method = "pearson", max_sites_per_chunk = 300000,
-  expand_upstream = 5000, expand_downstream = 5000, BPPARAM = BiocParallel::bpparam())})
+  expand_upstream = 5000, expand_downstream = 5000, BPPARAM = BPPARAM)})
 ```
 
 As an example, we'll examine the CpG methylation transcription correlations for 
@@ -251,7 +254,7 @@ system.time({transcript_body_meth_cors_mcrpc_samples <- calculateRegionMethylati
   genomic_regions = transcript_annotation_chr11, 
   genomic_region_transcripts = transcript_annotation_chr11$ID,
   region_methylation_summary_function = colMeans, 
-  cor_method = "pearson", BPPARAM = BiocParallel::bpparam())})
+  cor_method = "pearson", BPPARAM = BPPARAM)})
 
 # Show the top of the results table
 head(transcript_body_meth_cors_mcrpc_samples)
