--- a/vignettes/identifying_tmrs.Rmd
+++ b/vignettes/identifying_tmrs.Rmd
@@ -82,21 +82,21 @@ attributes(tubb6_cpg_meth_transcript_cors)$tss_range
 ```
 ## Plotting CpG Values
 
-We'll next create a plot of the correlation values using `plotMethSiteValues` so that we can 
+We'll next create a plot of the correlation values using `plotMethSiteCorCoefs` so that we can 
 visually inspect if there are any interesting patterns. On the x-axis we can show the chromosomal 
 coordinates of the CpG sites or alternatively their distance to the TSS if we provide a 
 GRanges object with the TSS location to the argument `reference_region`. 
 
 ```{r, eval=TRUE, fig.align="center", fig.show='hide'}
 # Plot methylation-transcription correlation values showing chromosomal coordinates of CpG sites.
-tubb6_correlation_plot_chrom_coords <- plotMethSiteValues(tubb6_cpg_meth_transcript_cors, 
-  column_name = "cor", ylabel = "Spearman Correlation", value_colours = "set2") + 
+tubb6_correlation_plot_chrom_coords <- plotMethSiteCorCoefs(tubb6_cpg_meth_transcript_cors, 
+  ylabel = "Spearman Correlation", value_colours = "set2") + 
 geom_hline(yintercept = 0, linetype = "dashed")
 print(tubb6_correlation_plot_chrom_coords)
 
 # Plot methylation-transcription correlation values showing distance of CpG sites to TSS. 
-tubb6_correlation_plot_tss_dist <- plotMethSiteValues(tubb6_cpg_meth_transcript_cors, 
-  column_name = "cor", ylabel = "Spearman Correlation", value_colours = "set2", 
+tubb6_correlation_plot_tss_dist <- plotMethSiteCorCoefs(tubb6_cpg_meth_transcript_cors, 
+  ylabel = "Spearman Correlation", value_colours = "set2", 
   reference_tss = attributes(tubb6_cpg_meth_transcript_cors)$tss_range) +
 geom_hline(yintercept = 0, linetype = "dashed")
 print(tubb6_correlation_plot_tss_dist)
@@ -111,7 +111,7 @@ opposite if the sign of the correlation (i.e. -1 for a positive correlation and 
 Thus, negative correlations will have a negative Methodical score and positive correlations will have a
 positive Methodical score, with the significance of the correlations determining their magnitude. 
 
-We'll show the Methodical scores for the TUBB6 CpG correlation values using the `plotMethSiteValues` function.
+We'll show the Methodical scores for the TUBB6 CpG correlation values using the `plotMethodicalScores` function.
 
 ```{r, eval=TRUE, fig.show='hide'}
 # Plot methodical scores for CpGs near TUBB6 TSS
@@ -186,7 +186,7 @@ print(tubb6_tmrs)
 We can add these TMRs to either the plot of correlation values or Methodical scores using
 `plotTMRs` to visualize where they are located in relation to these values. We'll 
 plot the TMRs on the Methodical scores first and then the correlation values. As with
-`plotMethSiteValues`, we can add a reference_positive so that we can see where the TMRs 
+`plotMethSiteCorCoefs`, we can add a reference_positive so that we can see where the TMRs 
 are located relative to the TSS, provided the plot used the same reference_position. We
 can clearly see that the TMRs overlap regions where many CpG sites display strong
 correlation values between their methylation and expression of TUBB6. 
